# bzlmod-examples

./: README.md
examples/01-simple/: BUILD  MODULE.bazel  main.cc
examples/02-simple-transitive/: BUILD  MODULE.bazel  main.cc
examples/03-simple-diamond/: .bazelrc  MODULE.bazel
examples/04-version-override/: A.patch  MODULE.bazel
examples/05-registry-override/: .bazelrc  MODULE.bazel  main.cc
examples/06-archive-override/: B.patch  BUILD  MODULE.bazel  main.cc
examples/07-git-override/: A.patch  BUILD  MODULE.bazel
examples/08-local-patch-override/: MODULE.bazel
examples/08-local-path-override/: .bazelrc  MODULE.bazel
examples/09-repo-name/: BUILD  MODULE.bazel  main.cc
examples/mvs/: BUILD  MODULE.bazel  main.cc
projects/: gen_archive.sh  server.py
projects/A/1.0/: MODULE.bazel  a.cc
projects/A/1.1/: MODULE.bazel  a.cc
projects/A/1.1-another/: BUILD  a.cc  a.h
projects/B/1.0/: MODULE.bazel  b.cc
projects/B/1.1/: BUILD  MODULE.bazel  b.cc
projects/B/1.2/: BUILD  MODULE.bazel  b.cc  b.h
projects/C/1.0/: BUILD  MODULE.bazel  c.cc  c.h
projects/C/1.1/: BUILD  MODULE.bazel  c.cc
registry/another/modules/A/: metadata.json
registry/another/modules/A/1.1/: source.json
registry/main/modules/A/: metadata.json
registry/main/modules/A/1.0/: MODULE.bazel  source.json
registry/main/modules/A/1.1/: MODULE.bazel  source.json
registry/main/modules/A/1.1-1/: MODULE.bazel  source.json
registry/main/modules/A/1.1-1/patches/: A.patch
registry/main/modules/B/: metadata.json
registry/main/modules/B/1.0/: MODULE.bazel  source.json
registry/main/modules/B/1.1/: MODULE.bazel  source.json
registry/main/modules/B/1.2/: MODULE.bazel  source.json
registry/main/modules/C/: metadata.json
registry/main/modules/C/1.0/: MODULE.bazel  source.json
registry/main/modules/C/1.1/: MODULE.bazel  presubmit.yml  source.json
