module(
  name = "main",
  version = "1.0",
  compatibility_level = 1,
)

# B 1.1 depends on A 1.1
bazel_dep(
  name = "B",
  version = "1.1",
)

# A should be pinned to 1.0 and patched
override_dep(
  name = "A",
  override = single_version_override(
    version = "1.0",
    patches = ["//:A.patch"],
  ),
)
