module(
  name = "main",
  version = "1.0",
  compatibility_level = 1,
)

# B 1.1 depends on A 1.1
bazel_dep(
  name = "B",
  version = "1.1",
)

bazel_dep(
  name = "A",
  version = "1.1",
)

# A should be fetched from the specified registry
single_version_override(
  module_name = "A",

  # version override also works together with registry override
  # version = "1.0",
  registry = "file://%workspace%/../../registry/another",
)
